...
                android:layout_marginTop="@dimen/sections_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:visibility="gone"
                tools:visibility="visible" />

            <include
                android:id="@+id/details_video_section"
                layout="@layout/details_video_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_overview_section"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/sections_margin"
...

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/generic_margin"
        android:src="@drawable/ic_favorite_border_white_36dp"
        android:visibility="gone"
...
