<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_popular"
        android:icon="@drawable/ic_whatshot_white_36dp"
        android:title="@string/popular" />


    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_border_white_36dp"
        android:title="@string/my_favorites" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/search" />
</menu>