<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_movies_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/favorite_movies_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/favorites_empty_message"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/general_text_size"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/favorite_movies_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
