<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/details_video_section_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:tint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_videocam_white_36dp" />

    <TextView
        android:id="@+id/details_video_section_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/generic_margin"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/trailers"
        android:textColor="@color/kinda_black"
        android:textSize="@dimen/general_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/details_video_section_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/details_video_section_icon"
        app:layout_constraintTop_toTopOf="@+id/details_video_section_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:nestedScrollingEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_video_section_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
